--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Josefin+Sans:ital@1&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="./firestore.js"></script>
-    <script src="script.js"></script>
     <title>To Do App</title>
   </head>
   <body>
@@ -33,14 +36,73 @@
           <div class="check-mark"></div>
         </div>
         <div class="new-todo-input">
+          <button
+            id="todo-input"
+            placeholder="Yapılacaklarınızı giriniz."
+          ></button>
           <form onsubmit="addItem(event)">
-            <input
-              id="todo-input"
-              type="text"
-              placeholder="Yapılacaklarınızı giriniz."
-            />
-          </form>
+          <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-container">
+                <div class="left">
+                  <form id="form-modal">
+                    <p>Task Title</p>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name=""
+                      id="textInput"
+                    />
+                    <br /><br />
+                    <p>Due Date</p>
+                    <input
+                      type="date"
+                      class="form-control"
+                      name=""
+                      id="dateInput"
+                    />
+                    <br /><br />
+                    <label for="post"> Write your todo here</label>
+                    <textarea
+                      name="post"
+                      id="input"
+                      cols="30"
+                      rows="10"
+                    ></textarea>
+                    <br />
+                    <br />
+                    <div id="msg"></div>
+                    <button type="submit">Save</button>
+                    <button type="submit" class="btn-cancel" onclick="closeForm()">Close</button>
+                  </form>
+                </div>
+                <div class="right">
+                  <h3>Your todos here</h3>
+                  <div id="posts">
+                    <div>
+                      <p>Hello world post 1</p>
+                      <span class="options">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash-alt"></i>
+                      </span>
+                    </div>
+
+                    <div>
+                      <p>Hello world post 2</p>
+                      <span class="options">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash-alt"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </form>
       </div>
       <div class="todo-items-wrapper">
         <div class="todo-items">
@@ -50,9 +112,11 @@
                 <img src="./assets/icon-check.svg" />
               </div>
             </div>
+             <!-- <button id="deleteBtn"><i class="fa fa-trash"></i></button>   -->
             <!-- <div class="todo-text">cut do laawvb</div> -->
           </div>
         </div>
+
         <div class="todo-item-info">
           <div class="items-left">5 item left</div>
           <div class="item-statuses">
@@ -66,5 +130,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
