--- a/index.html
+++ b/index.html
@@ -20,94 +20,96 @@
     <script src="./firestore.js"></script>
     <title>To Do App</title>
   </head>
-  <div class="background-img">
-    <img src="./assets/bg-desktop-dark.jpg" />
-  </div>
-  <div class="container">
-    <div class="header">
-      <div class="title">TODO</div>
-      <div class="theme">
-        <img src="./assets/icon-sun.svg" />
-      </div>
+  <body>
+    <div class="background-img">
+      <img src="./assets/bg-desktop-dark.jpg" />
     </div>
-    <div class="new-todo">
-      <!-- <div class="check">
-        <div class="check-mark"></div>
-      </div> -->
-      <div class="new-todo-input">
-        <button
-          id="todo-input"
-        >Todo eklemek için tıkla.</button>
-        <form onsubmit="addItem(event)">
-        <div id="myModal" class="modal">
-          <!-- Modal content -->
-          <div class="modal-content">
-            <span onclick="closeModal()" class="close">&times;</span>
-            <div class="hrStyle">
-              <h2>Todo List</h2>
-              <hr>
-            </div>
-            <div class="modal-container">
-              <div class="left">
-                <form id="form-modal">
-                  <p></p>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name=""
-                    id="textInput"
-                    placeholder="Başlık giriniz"
-                  />
-                  <br /><br />
-                  <p></p>
-                  <input
-                    type="date"
-                    class="form-control"
-                    name=""
-                    id="dateInput"
-                  />
-                  <br /><br />
-                  <label for="post"></label>
-                  <textarea
-                    name="post"
-                    id="input"
-                    cols="30"
-                    rows="10"
-                    placeholder="Yapılacaklar"
-                  ></textarea>
-                  <br />
-                  <button type="submit" class="btn-save">Save</button>
-                </form>
+    <div class="container">
+      <div class="header">
+        <div class="title">TODO</div>
+        <div class="theme">
+          <img src="./assets/icon-sun.svg" />
+        </div>
+      </div>
+      <div class="new-todo">
+        <!-- <div class="check">
+          <div class="check-mark"></div>
+        </div> -->
+        <div class="new-todo-input">
+          <button
+            id="todo-input"
+          >Todo eklemek için tıkla.</button>
+          <form>
+          <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span onclick="closeModal()" class="close">&times;</span>
+              <div class="hrStyle">
+                <h2>Todo List</h2>
+                <hr>
+              </div>
+              <div class="modal-container">
+                <div class="left">
+                  <form id="form-modal">
+                    <p></p>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name=""
+                      id="textInput"
+                      placeholder="Başlık giriniz"
+                    />
+                    <br /><br />
+                    <p></p>
+                    <input
+                      type="date"
+                      class="form-control"
+                      name=""
+                      id="dateInput"
+                    />
+                    <br /><br />
+                    <label for="post"></label>
+                    <textarea
+                      name="post"
+                      id="input"
+                      cols="30"
+                      rows="10"
+                      placeholder="Yapılacaklar"
+                    ></textarea>
+                    <br />
+                    <button type="submit" class="btn-save" onclick="addItem(event)">Save</button>
+                    <input type="button" class="editbtn" value="Edit"></input>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </form>
       </div>
-    </form>
-    </div>
-    <div class="todo-items-wrapper">
-      <div class="todo-items">
-        <div class="todo-item">
-          <div class="check">
-            <div class="check-mark">
-              <img src="./assets/icon-check.svg" />
+      <div class="todo-items-wrapper">
+        <div class="todo-items">
+          <div class="todo-item">
+            <div class="check">
+              <div class="check-mark">
+                <img src="./assets/icon-check.svg" />
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="todo-item-info">
-        <div class="items-left">5 item left</div>
-        <div class="item-statuses">
-          <span class="active">All</span>
-          <span>Active</span>
-          <span>Complated</span>
-        </div>
-        <div class="items-clear">
-          <span>Clear Complated</span>
+        <div class="todo-item-info">
+          <div class="items-left">5 item left</div>
+          <div class="item-statuses">
+            <span class="active">All</span>
+            <span>Active</span>
+            <span>Complated</span>
+          </div>
+          <div class="items-clear">
+            <span>Clear Complated</span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
