update save and edit buttons

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                       placeholder="Yapılacaklar"
                     ></textarea>
                     <br />
-                    <button type="submit" class="btn-save" onclick="addItem(event)">Save</button>
-                    <input type="button" class="editbtn" value="Edit"></input>
+                    <button type="submit" id="kaydet" class="btn-save" onclick="addItem(event)">Kaydet</button>
+                    <input type="button" id="edit" class="editbtn" value="Kaydet"></input> 
                   </form>
                 </div>
               </div>
