Editing the plan active part

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                       placeholder="Yapılacaklar"
                     ></textarea>
                     <br />
-                    <button type="submit" id="kaydet" class="btn-save" onclick="addItem(event)">Kaydet</button>
+                     <!-- <button type="submit" class="btn-save" onclick="butonFunction()">Kaydet</button>  -->
+                     <button type="submit" id="kaydet" class="btn-save" onclick="addItem(event)">Kaydet</button>
                     <input type="button" id="edit" class="editbtn" value="Kaydet"></input> 
                   </form>
                 </div>
