--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       </form>
       </div>
       <div class="todo-items-wrapper">
-        <div class="todo-items">
-          <div class="todo-item">
+        <div class="todo-items" id="todos">
+          <div class="todo-item" id="todo">
             <div class="check">
               <div class="check-mark">
                 <img src="./assets/icon-check.svg" />
@@ -101,12 +101,12 @@
         <div class="todo-item-info">
           <div class="items-left">5 item left</div>
           <div class="item-statuses">
-            <span class="active">All</span>
-            <span>Active</span>
-            <span>Complated</span>
+            <span onclick="allList()">All</span>
+            <span onclick="activeList()">Active</span>
+            <span onclick="completed()">Completed</span>
           </div>
           <div class="items-clear">
-            <span>Clear Complated</span>
+            <span onclick="clearAll(event)">Clear All Todos</span>
           </div>
         </div>
       </div>
