Adding the clearAllTodo button

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <span onclick="completed()">Completed</span>
           </div>
           <div class="items-clear">
-            <span onclick="clearAll(event)">Clear All Todos</span>
+            <span onclick="clearAll()">Clear All Todos</span>
           </div>
         </div>
       </div>
